# growl

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/dsp/: DistortionStage.h  FactoryPresets.h  GrowlDSP.h  GrowlProcessor.h  ModulationSystem.h  NoiseGenerator.h  OscillatorBank.h  Preset.h  ResonanceSystem.h  SizeScaler.h
presets/: COMPLETION_SUMMARY.md  DSP_INTEGRATION_GUIDE.md  DSP_INTEGRATION_STATUS.md  FACTORY_PRESETS.md  FILE_MANIFEST.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md
scripts/: quick_validate.sh  validate.sh
src/: FactoryPresets.cpp  GrowlPlugin.cpp
tests/: GrowlDSPTest.cpp
